possible fix
am i messed up or is css?

--- a/styles/main.css
+++ b/styles/main.css
@@ -91,7 +91,7 @@ body::-webkit-scrollbar{
 }
 
 .floattext img {
-    background-color: #e5e5e550;
+    background-color: #15151550;
     border-radius: 2vw;
     padding:2vw
     
@@ -151,7 +151,7 @@ footer {
 }
 
 .floattext2 img {
-    background-color: #e5e5e550;
+    background-color: #15151550;
     border-radius: 1vw;
     padding:0.5vw
     
